<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_device_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/device_alias"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/tv_password"
            app:layout_constraintStart_toStartOf="@+id/tv_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <EditText
            android:id="@+id/et_device_alias"
            android:layout_width="@dimen/edit_text_size"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_device_alias"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@id/tv_device_alias"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toTopOf="@id/tv_device_alias"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/et_device_name"
            android:layout_width="@dimen/edit_text_size"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_device_name"
            android:inputType="textPersonName"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_device_name"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toTopOf="@+id/tv_device_name"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/tv_imei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/imei"
            android:textColor="@android:color/black"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/tv_device_name"
            app:layout_constraintStart_toStartOf="@+id/tv_device_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_device_name" />

        <TextView
            android:id="@+id/tv_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/remark"
            android:textColor="@android:color/black"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/tv_device_name"
            app:layout_constraintStart_toStartOf="@+id/tv_device_name"
            app:layout_constraintTop_toBottomOf="@id/tv_imei" />

        <TextView
            android:id="@+id/tv_imei_code"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/remark"
            android:textColor="@android:color/black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_imei"
            app:layout_constraintEnd_toEndOf="@+id/et_device_name"
            app:layout_constraintStart_toStartOf="@+id/et_device_name"
            app:layout_constraintTop_toTopOf="@+id/tv_imei" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_blue_corner"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/btn_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="@dimen/edit_text_size"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:ems="10"
            android:hint="@string/hint_user_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/tv_user_name"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_user_name"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="64dp"
            android:text="@string/user_name"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/device_name"
            android:textColor="@android:color/black"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/tv_password"
            app:layout_constraintStart_toStartOf="@+id/tv_password"
            app:layout_constraintTop_toBottomOf="@id/tv_device_alias" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/password"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/tv_user_name"
            app:layout_constraintStart_toStartOf="@+id/tv_user_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="@dimen/edit_text_size"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPersonName|textPassword"
            app:layout_constraintBottom_toBottomOf="@+id/tv_password"
            app:layout_constraintEnd_toEndOf="@+id/et_user_name"
            app:layout_constraintStart_toStartOf="@+id/et_user_name"
            app:layout_constraintTop_toTopOf="@+id/tv_password"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/et_remark"
            android:layout_width="@dimen/edit_text_size"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_remark"
            android:inputType="textPersonName"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_remark"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toTopOf="@+id/tv_remark"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btn_get_mission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_blue_corner"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/btn_get_mission"
            app:layout_constraintBottom_toBottomOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/btn_login"
            app:layout_constraintVertical_bias="0.821" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>