<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/reload_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/pavilion_list"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_online_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pavilion_list"
                android:textSize="@dimen/head_size"/>

            <View
                android:id="@+id/view"
                style="@style/lineStyle"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/divide_height_10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="@dimen/divide_height_10dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_online_device"
                app:layout_constraintStart_toStartOf="@+id/tv_online_device"
                app:layout_constraintTop_toBottomOf="@+id/tv_online_device"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:horizontalSpacing="@dimen/spacing_5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:verticalSpacing="@dimen/spacing_5dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:layout_editor_absoluteX="8dp"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/notification_large_icon_height"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/btn_manage_device"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/menu_manage_device"/>

                <Button
                    android:id="@+id/btn_send_command_batch"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="400dp"
                    android:layout_weight="1"
                    android:text="@string/menu_send_command_batch"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/btn_menu_search"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_search"
                    android:visibility="gone"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.constraint.ConstraintLayout>